# course-otus-architecture_and_patterns

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: checks.yaml  test_on_push.yaml
src/spacegame/hw03/: QuadraticEquation.py
src/spacegame/hw05/: hw05.py
src/spacegame/hw07/: hw07.py
src/spacegame/hw08/: hw08.py
src/spacegame/hw09/: hw09.py  try_threading.py  try_threading2.py  try_threading3.py
src/spacegame/hw11/: hw11.py  try_dependency_injection.py  try_dependency_injection_with_ioc.py  try_operationbuilder.py  try_pool.py  try_weakref.py
src/spacegame/hw12/: hw12.py  try_adapter_init.py  try_bridge.py  try_builder_strategy.py  try_exec.py  try_plugin.py  try_type_generator.py
src/spacegame/hw14/: hw14.py  try_Processor.py  try_ServerThread.py  try_Thread&Queue.py  try_Thread&Queue_with_time.py
src/spacegame/hw16/: hw16.py  try_gamecmd.py  try_start_thread.py
src/spacegame/hw21/: hw21.py  try_Crossroads.py  try_TrafficLights.py
tests/: test_spacegame.py
tests/spacegame/hw03/: test_QuadraticEquation.py
tests/unit/: test_import_package.py
tests/unit/hw05/: test_hw05.py
tests/unit/hw07/: test_hw07.py
tests/unit/hw08/: test_hw08.py
tests/unit/hw09/: test_ScopeBased.py  test_SingleThreadScope.py  test_hw09.py
tests/unit/hw12/: test_hw12.py
tests/unit/hw14/: test_hw14.py
