[tool.poetry]
name = "spacegame"
version = "0.1.0"
description = ""
authors = ["Alb M <rinkorn.alb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
mypy = "^1.5.1"
black = "^23.7.0"
ruff = "^0.0.286"
ipykernel = "^6.25.1"
ipywidgets = "^8.1.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.ruff]
line-length = 88 # defaults to 88 like black
target-version = "py310" # the python version to target, useful when considering code upgrades, defaults to "py310"
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade,
    "I",  # isort
]
ignore = [
    "F401", # unused imports
    "F841", # unused variable
]

[tool.pytest.ini_options]
# addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 75"
addopts = "--cov --cov-report term-missing --cov-fail-under 75"

[tool.coverage.run]
source = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
